[gd_scene load_steps=9 format=3 uid="uid://bc2p61vw5rhbp"]

[ext_resource type="Script" path="res://NodeGraph/oscilloscope.gd" id="1_jxh2n"]
[ext_resource type="Script" path="res://NodeGraph/automator.gd" id="2_ajfyn"]
[ext_resource type="Script" path="res://UiElements/auto_texture_button.gd" id="2_helad"]
[ext_resource type="Texture2D" uid="uid://bobxc5nk5g5wg" path="res://assets/icons/Circle_10x10.png" id="2_vjnsr"]
[ext_resource type="Texture2D" uid="uid://bwqnvee7useik" path="res://assets/icons/AddNode_20x20.png" id="3_3al5g"]
[ext_resource type="Texture2D" uid="uid://bjrirjj3h07hl" path="res://assets/icons/DeleteNode_20x20.png" id="5_t2juw"]
[ext_resource type="Texture2D" uid="uid://bddbwe4tgwrk" path="res://assets/icons/DeleteNode_Disabled_20x20.png" id="6_kg707"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wkdb"]
bg_color = Color(0.188235, 0.188235, 0.188235, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 4
anti_aliasing_size = 2.0

[node name="Nodes" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="Math" type="GraphNode" parent="."]
visible = false
layout_mode = 0
offset_right = 92.0
offset_bottom = 80.0
title = "Math"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true

[node name="Output" type="Label" parent="Math"]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="Option" type="OptionButton" parent="Math"]
layout_mode = 2
item_count = 22
selected = 0
popup/item_0/text = "Add"
popup/item_0/id = 0
popup/item_1/text = "Subtract"
popup/item_1/id = 1
popup/item_2/text = "Multiply"
popup/item_2/id = 2
popup/item_3/text = "Divide"
popup/item_3/id = 3
popup/item_4/text = "Power"
popup/item_4/id = 4
popup/item_5/text = "Square root"
popup/item_5/id = 5
popup/item_6/text = "Absolute"
popup/item_6/id = 6
popup/item_7/text = "Minimum"
popup/item_7/id = 7
popup/item_8/text = "Maximum"
popup/item_8/id = 8
popup/item_9/text = "Less than"
popup/item_9/id = 9
popup/item_10/text = "Greater than"
popup/item_10/id = 10
popup/item_11/text = "Sign"
popup/item_11/id = 11
popup/item_12/text = "Floor"
popup/item_12/id = 12
popup/item_13/text = "Ceiling"
popup/item_13/id = 13
popup/item_14/text = "Round"
popup/item_14/id = 14
popup/item_15/text = "Modulo"
popup/item_15/id = 15
popup/item_16/text = "Sine"
popup/item_16/id = 16
popup/item_17/text = "Cosine"
popup/item_17/id = 17
popup/item_18/text = "Tangent"
popup/item_18/id = 18
popup/item_19/text = "Arcsine"
popup/item_19/id = 19
popup/item_20/text = "Arccosine"
popup/item_20/id = 20
popup/item_21/text = "Arctangent"
popup/item_21/id = 21

[node name="Port0" type="SpinBox" parent="Math"]
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
prefix = "A:"

[node name="Port1" type="SpinBox" parent="Math"]
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
prefix = "B:"

[node name="WaveformGenerator" type="GraphNode" parent="."]
visible = false
layout_mode = 0
offset_right = 92.0
offset_bottom = 80.0
title = "WaveformGenerator"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true

[node name="Output" type="Label" parent="WaveformGenerator"]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="Option" type="OptionButton" parent="WaveformGenerator"]
layout_mode = 2
item_count = 6
selected = 0
popup/item_0/text = "Sine"
popup/item_0/id = 0
popup/item_1/text = "Triangle"
popup/item_1/id = 1
popup/item_2/text = "Saw"
popup/item_2/id = 2
popup/item_3/text = "Square"
popup/item_3/id = 3
popup/item_4/text = "White noise"
popup/item_4/id = 4
popup/item_5/text = "Perlin noise"
popup/item_5/id = 5

[node name="Port0" type="SpinBox" parent="WaveformGenerator"]
layout_mode = 2
max_value = 44100.0
step = 0.0
value = 440.0
allow_greater = true
allow_lesser = true
prefix = "Frequency:"

[node name="Port1" type="SpinBox" parent="WaveformGenerator"]
layout_mode = 2
step = 0.0
value = 1.0
allow_greater = true
allow_lesser = true
prefix = "Amplitude:"

[node name="Port2" type="SpinBox" parent="WaveformGenerator"]
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
prefix = "Phase:"

[node name="Time" type="GraphNode" parent="."]
visible = false
layout_mode = 0
offset_right = 92.0
offset_bottom = 80.0
title = "Time"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Output" type="Label" parent="Time"]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="InlineComment" type="GraphNode" parent="."]
visible = false
layout_mode = 0
offset_right = 92.0
offset_bottom = 80.0
title = "InlineComment"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true

[node name="TextEdit" type="TextEdit" parent="InlineComment"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
placeholder_text = "Write a comment here..."
wrap_mode = 1
scroll_fit_content_height = true

[node name="Output" type="Label" parent="InlineComment"]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="Port0" type="SpinBox" parent="InlineComment"]
layout_mode = 2
max_value = 44100.0
step = 0.0
allow_greater = true
allow_lesser = true
prefix = "Input:"

[node name="Comment" type="GraphNode" parent="."]
visible = false
layout_mode = 0
offset_right = 92.0
offset_bottom = 80.0
title = "InlineComment"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="TextEdit" type="TextEdit" parent="Comment"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
placeholder_text = "Write a comment here..."

[node name="Oscilloscope" type="GraphNode" parent="."]
visible = false
layout_mode = 0
offset_right = 92.0
offset_bottom = 80.0
title = "Oscilloscope"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = true
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = true
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
script = ExtResource("1_jxh2n")

[node name="Surface" type="ColorRect" parent="Oscilloscope"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
color = Color(0, 0, 0, 0.117647)

[node name="Output" type="Label" parent="Oscilloscope"]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="Port0" type="SpinBox" parent="Oscilloscope"]
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
prefix = "Input:"

[node name="Port1" type="SpinBox" parent="Oscilloscope"]
layout_mode = 2
value = 100.0
allow_greater = true
allow_lesser = true
prefix = "Sample count:"

[node name="Port2" type="SpinBox" parent="Oscilloscope"]
layout_mode = 2
step = 0.0
value = 0.5
allow_greater = true
allow_lesser = true
prefix = "Height scale:"

[node name="Port3" type="SpinBox" parent="Oscilloscope"]
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
prefix = "Height offset:"

[node name="Automator" type="GraphNode" parent="."]
layout_mode = 0
offset_right = 36.0
offset_bottom = 54.0
title = "Automator"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = true
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = true
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = true
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
script = ExtResource("2_ajfyn")

[node name="Output" type="Label" parent="Automator"]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="Interface" type="VBoxContainer" parent="Automator"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Buttons" type="HBoxContainer" parent="Automator/Interface"]
layout_mode = 2
alignment = 1

[node name="Add" type="TextureButton" parent="Automator/Interface/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Remove selected keyframe"
texture_normal = ExtResource("3_3al5g")
script = ExtResource("2_helad")

[node name="Remove" type="TextureButton" parent="Automator/Interface/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Remove selected keyframe"
texture_normal = ExtResource("5_t2juw")
texture_disabled = ExtResource("6_kg707")
script = ExtResource("2_helad")

[node name="InterfaceArea" type="Panel" parent="Automator/Interface"]
clip_children = 2
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_6wkdb")

[node name="Keyframe" type="TextureButton" parent="Automator/Interface/InterfaceArea"]
visible = false
layout_mode = 0
offset_right = 10.0
offset_bottom = 10.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("2_vjnsr")
script = ExtResource("2_helad")
normal_alpha = 0.5

[node name="DrawingSurface" type="ColorRect" parent="Automator/Interface/InterfaceArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Port0" type="SpinBox" parent="Automator"]
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
prefix = "Input:"

[node name="Port1" type="SpinBox" parent="Automator"]
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
prefix = "Time min:"
suffix = "s"

[node name="Port2" type="SpinBox" parent="Automator"]
layout_mode = 2
step = 0.0
value = 1.0
allow_greater = true
allow_lesser = true
prefix = "Time max:"
suffix = "s"

[node name="Port3" type="SpinBox" parent="Automator"]
layout_mode = 2
step = 0.0
allow_greater = true
allow_lesser = true
prefix = "Output min:"

[node name="Port4" type="SpinBox" parent="Automator"]
layout_mode = 2
step = 0.0
value = 1.0
allow_greater = true
allow_lesser = true
prefix = "Output max:"

[connection signal="pressed" from="Automator/Interface/Buttons/Add" to="Automator" method="_on_add_pressed"]
[connection signal="pressed" from="Automator/Interface/Buttons/Remove" to="Automator" method="_on_remove_pressed"]
[connection signal="focus_entered" from="Automator/Interface/InterfaceArea" to="Automator" method="_on_interface_area_focus_entered"]
[connection signal="draw" from="Automator/Interface/InterfaceArea/DrawingSurface" to="Automator" method="_on_drawing_surface_draw"]
